@@ -10,7 +10,8 @@ sbin_PROGRAMS = init
 init_SOURCES = \
 	main.c \
 	process.c process.h \
-	job.c job.h
+	job.c job.h \
+	event.c event.h
 
 init_LDFLAGS = -static
 init_LDADD = \
@@ -19,7 +20,8 @@ init_LDADD = \
 
 TESTS = \
 	test_process \
-	test_job
+	test_job \
+	test_event
 
 check_PROGRAMS = $(TESTS)
 
@@ -30,6 +32,10 @@ test_job_LDADD = ../nih/libnih.la process.o job.o
 test_process_SOURCES = tests/test_process.c
 test_process_LDFLAGS = -static
 test_process_LDADD = ../nih/libnih.la process.o job.o
+
+test_event_SOURCES = tests/test_event.c
+test_event_LDFLAGS = -static
+test_event_LDADD = ../nih/libnih.la event.o
 
 
 clean-local:
